2004-05-06 Ian Rutt
 * Rationalisation of calc_coverage (glimmer_object.f90), with 
	global grid objects.
 * Minor formatting changes.
 * Completed adding initialisation to derived types and rejigging
	namelist reads to avoid confusion about default values.

2004-05-05 Ian Rutt
 * Realised several crucial aspects of the orography output were
	missing, so added them. Produces orography as expected now,
	but some structural changes are needed, I think.
 * Restructured code so that global grid definitions have their own 
	derived type, which simplifies things. However, more rationalisation 
	and simplification still possible
 * Minor formatting, and removal of redundant stress arrays

2004-05-04 Ian Rutt
 * Added upscale type to glimmer_interp.f90 and adjusted code 
  	accodingly. This was to enable the output of orography 
	at any resolution, as needed by the IGCM. 
 * ***NB*** This hasn't been tested properly yet, and the
	restarts have been broken by it, as there wasn't time
 	to add routine writing the upscaling to a restart file
 * Other minor formating changes, and addition of null pointer
	initialisation in some places

2004-04-27 Ian Rutt
 * Added doc comments to gmt.f90
 * Updated return value documentation throughout to !*RV
 * Other minor documentation and formatting changes
 * Moved glimmer_params initialisation to type definition
	in line with move to f95, and added null 
	initialisation for pointer arrays. (glimmer.f90)
 * Checked all elements of glimmer_params correctly
	included in restart routines and in consistent
	order. This should work OK, but hasn't been tested...

2004-04-26 Ian Rutt
 * Merged port_to_nag branch into HEAD
 * Extended interpolation routines (glimmer_interp.f90) to include 
	averaging high-resolution global field onto local
	grid. Also generalised find_ll_index somewhat to cope 
	with longitudes that have limits other than 0->360 
	(e.g. 180->360, 0->180). This may need more work, though.