@@ -4,6 +4,8 @@
  * Minor formatting changes.
  * Completed adding initialisation to derived types and rejigging
 	namelist reads to avoid confusion about default values.
+ * Coded alternative, hopefully faster calc_coverage routine.
+ * Made efficiency alterations to new_upscale code.
 
 2004-05-05 Ian Rutt
  * Realised several crucial aspects of the orography output were
